[package]
name = "radio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.0-rc.2", features = ["headers", "multipart", "ws"] }
axum-server = { version = "0.4", features = ["tls-rustls"] }
futures = "0.3"
tower = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webrtc = "0.5"
base64 = "0.13"
lazy_static = "1.4"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
clap = "3.2"
